[package]
name = "rbfbclient"
version = "0.0.1"
authors = ["Luis Fernando Batels <luisfbatels@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rbfbclient"
crate-type = ["dylib"]

[dependencies]
rutie = "0.8.0"
rsfbclient = "0.5.1"
rsfbclient-native = "0.5.1"
lazy_static = "1.4.0"