[package]
name = "rbfbclient"
version = "0.0.1"
authors = ["Luis Fernando Batels <luisfbatels@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rbfbclient"
crate-type = ["dylib"]

[dependencies]
rutie = "0.8.0"
rsfbclient = { git = "https://github.com/fernandobatels/rsfbclient", branch = "boolean" }
rsfbclient-native = { git = "https://github.com/fernandobatels/rsfbclient", branch = "boolean" }
rsfbclient-core = { git = "https://github.com/fernandobatels/rsfbclient", branch = "boolean" }
lazy_static = "1.4.0"